src/objects/CustomerFirstManagement__c.object
<CustomObject>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>客户编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFirst__c</fullName>
        <label>客户是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldVisitQualified__c</fullName>
        <label>实地考察合格</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>客户首营信息</relationshipLabel>
        <relationshipName>Name</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PermitNumber__c</fullName>
        <label>许可证号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedSpecies__c</fullName>
        <label>拟供品种</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualityManager__c</fullName>
        <label>质量负责人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>销售组织</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheFirstProduct__c</fullName>
        <label>产品是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThroughTheFirstCamp__c</fullName>
        <label>是否通过首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>客户首营信息</label>
    <nameField>
        <displayFormat>FA-{000000000}</displayFormat>
        <label>客户首营流水号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>客户首营信息</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>